@@ -18,6 +18,7 @@ ChangeLog
 2009???? - 1.22.92
 
 [-] * Fixed getting of network name from saved message.
+[-] * Fixed encoding of text to some encodings in AT engine.
     
 20090116 - 1.22.91
 
